<resources>
    <string name="app_name">AplicacionesPMDM</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">ALTURA</string>
    <string name="weight">PESO</string>
    <string name="age">EDAD</string>
    <string name="result">RESULTADO</string>
    <string name="recalculate">RECALCULAR</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo normativo para tu peso y altura.</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo normativo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo normativo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo normativo para tu peso y altura.</string>
    <string name="boardgames">JUEGOS DE MESA</string>
    <string name="categories">CATEGORÍAS</string>
    <string name="games">JUEGOS</string>
    <string name="dialog_add_game">AÑADE UN JUEGO</string>
    <string name="dialog_cooperative_category">Cooperativos</string>
    <string name="dialog_lcg_category">Living card games</string>
    <string name="dialog_legacy_category">Legacy</string>
    <string name="dialog_euro_category">Eurogames</string>
    <string name="dialog_deckbuilding_category">Deckbuilding</string>
    <string name="dialog_newgame_button">Nuevo juego</string>

    <string name="color_white">Blanco</string>
    <string name="color_red">Rojo</string>
    <string name="color_orange">Naranja</string>
    <string name="color_yellow">Amarillo</string>
    <string name="color_green">Verde</string>
    <string name="color_cyan">Cian</string>
    <string name="color_blue">Azul</string>
    <string name="color_violet">Violeta</string>
    <string name="color_black">Negro</string>
</resources>